...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_top"
        android:textSize="16sp">

        <EditText
            android:id="@+id/et_place"
            style="@style/edit_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_fishing_place"/>
    </android.support.design.widget.TextInputLayout>

...
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_tackle_value"
        android:layout_marginTop="@dimen/default_margin_top"
        android:textSize="16sp">

        <EditText
            android:id="@+id/et_bait"
            style="@style/edit_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_fishing_bait"/>

    </android.support.design.widget.TextInputLayout>
...
