<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_camera"
        android:icon="@drawable/ic_camera_alt_24dp"
        android:title="@string/action_camera"
        app:showAsAction="always" />

    <!--<item-->
        <!--android:id="@+id/action_modify_things_list"-->
        <!--android:icon="@drawable/ic_things"-->
        <!--android:title="@string/action_things"-->
        <!--app:showAsAction="always" />-->

    <item
        android:id="@+id/action_add_new_fishing"
        android:icon="@drawable/ic_done_24dp"
        android:title="@string/action_save"
        app:showAsAction="always" />

    <!--<item-->
        <!--android:id="@+id/action_back"-->
        <!--android:icon="@drawable/ic_back_arrow"-->
        <!--android:title="@string/action_back"-->
        <!--app:showAsAction="always" />-->

</menu>