...
        android:layout_height="match_parent"
        android:scrollbars="vertical" />

    <!--<net.validcat.fishing.ui.FloatingActionButton-->

    <!--xmlns:app = "http://schemas.android.com/apk/res-auto"-->
    <!--android:id="@+id/fab_add_fishing"-->
    <!--android:layout_width="@dimen/fab_size"-->
    <!--android:layout_height="@dimen/fab_size"-->
    <!--app:elevation="@dimen/fab_elevation"-->
    <!--android:background="@drawable/fab_background"-->
    <!--android:layout_gravity="center_horizontal"-->
    <!--android:layout_alignParentBottom="true"-->
...
