<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin_top">

    <TextView
        android:id="@+id/empty_list_text_view"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/list_is_empty"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/things_list_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_add_thing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="16dp"
        android:src="@drawable/ic_white_add"
        app:borderWidth="0dp"
        app:elevation="6dp"
        app:fabSize="normal"
        app:layout_anchor="@id/things_list_fragment"
        app:layout_anchorGravity="bottom|right|end"
        app:layout_behavior="net.validcat.fishing.ui.ScrollAwareFABBehavior"
        app:pressedTranslationZ="12dp" />

</android.support.design.widget.CoordinatorLayout>
