<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_save_list"
        android:icon="@drawable/ic_done_24dp"
        android:title="@string/action_save"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_remove_all"
        android:title="@string/action_remove_all"
        app:showAsAction="never" />
</menu>